; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_gmrid_manager.c_vmw_gmrid_man_put_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_gmrid_manager.c_vmw_gmrid_man_put_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttm_mem_type_manager = type { i64 }
%struct.ttm_mem_reg = type { i32*, i64, i32 }
%struct.vmwgfx_gmrid_man = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ttm_mem_type_manager*, %struct.ttm_mem_reg*)* @vmw_gmrid_man_put_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmw_gmrid_man_put_node(%struct.ttm_mem_type_manager* %0, %struct.ttm_mem_reg* %1) #0 {
  %3 = alloca %struct.ttm_mem_type_manager*, align 8
  %4 = alloca %struct.ttm_mem_reg*, align 8
  %5 = alloca %struct.vmwgfx_gmrid_man*, align 8
  store %struct.ttm_mem_type_manager* %0, %struct.ttm_mem_type_manager** %3, align 8
  store %struct.ttm_mem_reg* %1, %struct.ttm_mem_reg** %4, align 8
  %6 = load %struct.ttm_mem_type_manager*, %struct.ttm_mem_type_manager** %3, align 8
  %7 = getelementptr inbounds %struct.ttm_mem_type_manager, %struct.ttm_mem_type_manager* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.vmwgfx_gmrid_man*
  store %struct.vmwgfx_gmrid_man* %9, %struct.vmwgfx_gmrid_man** %5, align 8
  %10 = load %struct.ttm_mem_reg*, %struct.ttm_mem_reg** %4, align 8
  %11 = getelementptr inbounds %struct.ttm_mem_reg, %struct.ttm_mem_reg* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %38

14:                                               ; preds = %2
  %15 = load %struct.vmwgfx_gmrid_man*, %struct.vmwgfx_gmrid_man** %5, align 8
  %16 = getelementptr inbounds %struct.vmwgfx_gmrid_man, %struct.vmwgfx_gmrid_man* %15, i32 0, i32 2
  %17 = load %struct.ttm_mem_reg*, %struct.ttm_mem_reg** %4, align 8
  %18 = getelementptr inbounds %struct.ttm_mem_reg, %struct.ttm_mem_reg* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @ida_free(i32* %16, i32 %19)
  %21 = load %struct.vmwgfx_gmrid_man*, %struct.vmwgfx_gmrid_man** %5, align 8
  %22 = getelementptr inbounds %struct.vmwgfx_gmrid_man, %struct.vmwgfx_gmrid_man* %21, i32 0, i32 0
  %23 = call i32 @spin_lock(i32* %22)
  %24 = load %struct.ttm_mem_reg*, %struct.ttm_mem_reg** %4, align 8
  %25 = getelementptr inbounds %struct.ttm_mem_reg, %struct.ttm_mem_reg* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.vmwgfx_gmrid_man*, %struct.vmwgfx_gmrid_man** %5, align 8
  %28 = getelementptr inbounds %struct.vmwgfx_gmrid_man, %struct.vmwgfx_gmrid_man* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = sub nsw i64 %30, %26
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %28, align 4
  %33 = load %struct.vmwgfx_gmrid_man*, %struct.vmwgfx_gmrid_man** %5, align 8
  %34 = getelementptr inbounds %struct.vmwgfx_gmrid_man, %struct.vmwgfx_gmrid_man* %33, i32 0, i32 0
  %35 = call i32 @spin_unlock(i32* %34)
  %36 = load %struct.ttm_mem_reg*, %struct.ttm_mem_reg** %4, align 8
  %37 = getelementptr inbounds %struct.ttm_mem_reg, %struct.ttm_mem_reg* %36, i32 0, i32 0
  store i32* null, i32** %37, align 8
  br label %38

38:                                               ; preds = %14, %2
  ret void
}

declare dso_local i32 @ida_free(i32*, i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
